- Removed support for multi-volume 7z files and use ZIP format again - Added a number of TODOs